# special-paths

./: .gitignore  CMakeLists.txt  README.md  special_paths.hpp  special_paths_nix.cpp  special_paths_win.cpp
include/special-paths/: special_paths.hpp
src/special-paths/: special_paths_nix.cpp  special_paths_win.cpp
